adjusted repository url

--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/utizr/xxxxxxxxxxxx"
+    "url": "http://github.com/utizr/valcomex"
   },
   "bugs": {
-    "url": "http://github.com/utizr/xxxxxxxxxxxx/issues"
+    "url": "http://github.com/utizr/valcomex/issues"
   },
   "license": "MIT"
 }
