--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "Tom Verschueren <tom.verschueren@slickss.com>",
     "Aaron Sievers"
   ],
-
   "main": "lib/index.js",
   "scripts": {
     "build": "./node_modules/coffee-script/bin/coffee --compile --output lib/ src/",
-    "test": "env env=test mocha --recursive --compilers coffee:coffee-script/register --require coffee-coverage/register-istanbul test && istanbul report",
-    "testQuick": "env env=test mocha --recursive --compilers coffee:coffee-script/register"
+    "test": "mocha && istanbul report text-summary lcov",
+    "testQuick": "env env=test mocha"
   },
   "keywords": [
     "validator",
@@ -25,11 +24,13 @@
     "lodash": "4.13.1"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "coffee-coverage": "^1.0.1",
     "coffee-script": "^1.10.0",
-    "chai": "^3.5.0",
+    "coveralls": "^2.11.14",
     "istanbul": "^0.4.3",
-    "mocha": "2.5.3"
+    "mocha": "2.5.3",
+    "mocha-lcov-reporter": "^1.2.0"
   },
   "repository": {
     "type": "git",
